--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.14...3.19)
+cmake_minimum_required(VERSION 3.14...3.20)
 
-project(GreeterStandalone LANGUAGES CXX)
+project(MathFunctionsStandalone LANGUAGES CXX)
 
 # --- Import tools ----
 
@@ -9,7 +9,6 @@ include(../cmake/tools.cmake)
 # ---- Dependencies ----
 
 include(../cmake/CPM.cmake)
-CPMUsePackageLock(package-lock.cmake)
 
 CPMAddPackage(
   NAME cxxopts
@@ -18,21 +17,21 @@ CPMAddPackage(
   OPTIONS "CXXOPTS_BUILD_EXAMPLES Off" "CXXOPTS_BUILD_TESTS Off"
 )
 
-CPMAddPackage(NAME Greeter SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
+CPMAddPackage(NAME MathFunctions SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
 # ---- Create standalone executable ----
 
 file(GLOB sources CONFIGURE_DEPENDS source/*.cpp)
 
-add_executable(GreeterStandalone ${sources})
-set_target_properties(GreeterStandalone PROPERTIES CXX_STANDARD ${CMAKE_CXX_STANDARD})
+add_executable(MathFunctionsStandalone ${sources})
+set_target_properties(MathFunctionsStandalone PROPERTIES CXX_STANDARD ${CMAKE_CXX_STANDARD})
 
 # WORKAROUND missing ALIAS target error! CK
 if(NOT TARGET cxxopts::cxxopts)
   add_library(cxxopts::cxxopts ALIAS cxxopts)
 endif()
-target_link_libraries(GreeterStandalone Greeter::Greeter cxxopts::cxxopts)
+target_link_libraries(MathFunctionsStandalone MathFunctions::MathFunctions cxxopts::cxxopts)
 
 # ---- run the standalone executable ----
 enable_testing()
-add_test(NAME GreeterStandalone COMMAND GreeterStandalone)
+add_test(NAME MathFunctionsStandalone COMMAND MathFunctionsStandalone)
