--- a/source/Addition/CMakeLists.txt
+++ b/source/Addition/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(${namespace}::Addition ALIAS Addition)
 
 # add include directories
 target_include_directories(
-  Addition PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>
+  Addition PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../include>
+                  $<INSTALL_INTERFACE:include>
 )
 
 # install the target and create export-set
