--- a/source/SquareRoot/CMakeLists.txt
+++ b/source/SquareRoot/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(${namespace}::SquareRoot ALIAS SquareRoot)
 
 # add include directories
 target_include_directories(
-  SquareRoot PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>
+  SquareRoot PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../include>
+                    $<INSTALL_INTERFACE:include>
 )
 
 # install the target and create export-set
