--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -21,7 +21,7 @@ CPMAddPackage(NAME MathFunctions SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
 # ---- Create standalone executable ----
 
-file(GLOB sources CONFIGURE_DEPENDS source/*.cpp)
+file(GLOB sources CONFIGURE_DEPENDS source/*.cxx)
 
 add_executable(MathFunctionsStandalone ${sources})
 set_target_properties(MathFunctionsStandalone PROPERTIES CXX_STANDARD ${CMAKE_CXX_STANDARD})
@@ -30,8 +30,9 @@ set_target_properties(MathFunctionsStandalone PROPERTIES CXX_STANDARD ${CMAKE_CX
 if(NOT TARGET cxxopts::cxxopts)
   add_library(cxxopts::cxxopts ALIAS cxxopts)
 endif()
-target_link_libraries(MathFunctionsStandalone MathFunctions::MathFunctions cxxopts::cxxopts)
+
+target_link_libraries(MathFunctionsStandalone MathFunctions::Addition MathFunctions::SquareRoot)
 
 # ---- run the standalone executable ----
 enable_testing()
-add_test(NAME MathFunctionsStandalone COMMAND MathFunctionsStandalone)
+add_test(NAME MathFunctionsStandalone COMMAND MathFunctionsStandalone 49.0)
