--- a/source/Addition/CMakeLists.txt
+++ b/source/Addition/CMakeLists.txt
@@ -1,21 +1,19 @@
 #
 # create a component library like boost
 #
-add_library(Addition STATIC Addition.cxx Addition.h)
+add_library(Addition STATIC Addition.cxx)
 
-add_library(${namespace}::Addition ALIAS Addition)
+add_library(${PROJECT_NAMESPACE}::Addition ALIAS Addition)
 
 # add include directories
 target_include_directories(
-  Addition PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../include>
-                  $<INSTALL_INTERFACE:include>
+  Addition PUBLIC $<BUILD_INTERFACE:${NAMESPACE_HEADER_LOCATION}> $<INSTALL_INTERFACE:include>
 )
 
 # install the target and create export-set
 install(
   TARGETS Addition
-  # XXX EXPORT AdditionTargets
-  EXPORT ${namespace}Targets
+  EXPORT ${PROJECT_NAMESPACE}Targets
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION bin
   RUNTIME DESTINATION bin
@@ -24,16 +22,15 @@ install(
 )
 
 # install header file
-string(TOLOWER ${namespace} HEADER_LOCATION)
-install(FILES Addition.h DESTINATION include/${HEADER_LOCATION})
+# string(TOLOWER ${PROJECT_NAMESPACE} HEADER_LOCATION)
+# install(FILES Addition.h DESTINATION include/${HEADER_LOCATION})
 
 if(DEFINED COMPONET_TARGETS_ENABLED)
   # generate and install export file
   install(
-    # XXX EXPORT AdditionTargets
-    EXPORT ${namespace}Targets
-    FILE ${namespace}AdditionTargets.cmake
-    NAMESPACE ${namespace}::
-    DESTINATION lib/cmake/${namespace}
+    EXPORT ${PROJECT_NAMESPACE}Targets
+    FILE ${PROJECT_NAMESPACE}AdditionTargets.cmake
+    NAMESPACE ${PROJECT_NAMESPACE}::
+    DESTINATION lib/cmake/${PROJECT_NAMESPACE}
   )
 endif()
