--- a/source/SquareRoot/CMakeLists.txt
+++ b/source/SquareRoot/CMakeLists.txt
@@ -1,21 +1,19 @@
 #
 # create a component library like boost
 #
-add_library(SquareRoot STATIC SquareRoot.cxx SquareRoot.h)
+add_library(SquareRoot STATIC SquareRoot.cxx)
 
-add_library(${namespace}::SquareRoot ALIAS SquareRoot)
+add_library(${PROJECT_NAMESPACE}::SquareRoot ALIAS SquareRoot)
 
 # add include directories
 target_include_directories(
-  SquareRoot PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../include>
-                    $<INSTALL_INTERFACE:include>
+  SquareRoot PUBLIC $<BUILD_INTERFACE:${NAMESPACE_HEADER_LOCATION}> $<INSTALL_INTERFACE:include>
 )
 
 # install the target and create export-set
 install(
   TARGETS SquareRoot
-  # XXX EXPORT SquareRootTargets
-  EXPORT ${namespace}Targets
+  EXPORT ${PROJECT_NAMESPACE}Targets
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION bin
   RUNTIME DESTINATION bin
@@ -24,16 +22,15 @@ install(
 )
 
 # install header file
-string(TOLOWER ${namespace} HEADER_LOCATION)
-install(FILES SquareRoot.h DESTINATION include/${HEADER_LOCATION})
+# string(TOLOWER ${PROJECT_NAMESPACE} HEADER_LOCATION)
+# install(FILES SquareRoot.h DESTINATION include/${HEADER_LOCATION})
 
 if(DEFINED COMPONET_TARGETS_ENABLED)
   # generate and install export file
   install(
-    # XXX EXPORT SquareRootTargets
-    EXPORT ${namespace}Targets
-    FILE ${namespace}SquareRootTargets.cmake
-    NAMESPACE ${namespace}::
-    DESTINATION lib/cmake/${namespace}
+    EXPORT ${PROJECT_NAMESPACE}Targets
+    FILE ${PROJECT_NAMESPACE}SquareRootTargets.cmake
+    NAMESPACE ${PROJECT_NAMESPACE}::
+    DESTINATION lib/cmake/${PROJECT_NAMESPACE}
   )
 endif()
