--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,8 +42,7 @@ CPMAddPackage(
   OPTIONS "FMT_INSTALL YES"
 )
 
-#FIXME
-set(COMPONENT_TARGETS_ENABLED YES)
+#XXX set(COMPONENT_TARGETS_ENABLED YES)
 set(PROJECT_NAMESPACE ${PROJECT_NAME})
 set(NAMESPACE_HEADER_LOCATION ${CMAKE_CURRENT_LIST_DIR}/include)
 
