--- a/source/MathFunctions/CMakeLists.txt
+++ b/source/MathFunctions/CMakeLists.txt
@@ -21,11 +21,11 @@ install(
   DESTINATION include
 )
 
-# install header file
-# string(TOLOWER ${PROJECT_NAMESPACE} HEADER_LOCATION)
-# install(FILES ${NAMESPACE_HEADER_LOCATION}/${PROJECT_NAMESPACE}/MathFunctions.h DESTINATION include/${HEADER_LOCATION})
+# install header file string(TOLOWER ${PROJECT_NAMESPACE} HEADER_LOCATION) install(FILES
+# ${NAMESPACE_HEADER_LOCATION}/${PROJECT_NAMESPACE}/MathFunctions.h DESTINATION
+# include/${HEADER_LOCATION})
 
-if(DEFINED COMPONENT_TARGETS_ENABLED)
+if(COMPONENT_TARGETS_ENABLED)
   # generate and install export file
   install(
     EXPORT MathFunctionsTargets
