build shared libraries
use fmt lib for standalone example

--- a/source/Addition/CMakeLists.txt
+++ b/source/Addition/CMakeLists.txt
@@ -1,9 +1,18 @@
 #
 # create a component library like boost
 #
-add_library(Addition STATIC Addition.cxx)
+add_library(Addition Addition.cxx ${NAMESPACE_HEADER_LOCATION}/${PROJECT_NAMESPACE}/Addition.h)
 
 add_library(${PROJECT_NAMESPACE}::Addition ALIAS Addition)
+
+# Note: for SameMajorVersion upgrade stategie
+set_target_properties(
+  Addition
+  PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR}
+             VERSION ${PROJECT_VERSION}
+             VISIBILITY_INLINES_HIDDEN ${BUILD_SHARED_LIBS}
+             CMAKE_VISIBILITY_INLINES_HIDDEN ${BUILD_SHARED_LIBS}
+)
 
 # add include directories
 target_include_directories(
@@ -15,15 +24,17 @@ install(
   TARGETS Addition
   EXPORT ${PROJECT_NAMESPACE}Targets
   ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION bin
+  LIBRARY DESTINATION lib
   RUNTIME DESTINATION bin
   INCLUDES
   DESTINATION include
 )
 
-# install header file string(TOLOWER ${PROJECT_NAMESPACE} HEADER_LOCATION) install(FILES
-# ${NAMESPACE_HEADER_LOCATION}/${PROJECT_NAMESPACE}/Addition.h DESTINATION
-# include/${HEADER_LOCATION})
+# MAYBE: install public header files
+# string(TOLOWER ${PROJECT_NAMESPACE} HEADER_LOCATION)
+# install(FILES ${NAMESPACE_HEADER_LOCATION}/${PROJECT_NAMESPACE}/Addition.h
+#         DESTINATION include/${HEADER_LOCATION}
+# )
 
 if(COMPONENT_TARGETS_ENABLED)
   # generate and install export file
