--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,9 +24,9 @@ endif()
 include(cmake/options.cmake)
 
 # ---- Add dependencies via CPM ----
+# see https://github.com/cpm-cmake/CPM.cmake for more info
 
 include(cmake/CPM.cmake)
-# see https://github.com/cpm-cmake/CPM.cmake for more info
 
 # PackageProject.cmake will be used to make our target installable
 CPMAddPackage(
@@ -35,47 +35,51 @@ CPMAddPackage(
   VERSION 1.5.0
 )
 
-CPMAddPackage(
-  NAME fmt
-  GIT_TAG 7.1.3
-  GITHUB_REPOSITORY fmtlib/fmt # to get an installable target
-  OPTIONS "FMT_INSTALL YES"
-)
-
 set(COMPONENT_TARGETS_ENABLED NO)
 set(PROJECT_NAMESPACE ${PROJECT_NAME})
-set(NAMESPACE_HEADER_LOCATION ${CMAKE_CURRENT_LIST_DIR}/include)
+set(NAMESPACE_HEADER_LOCATION ${PROJECT_SOURCE_DIR}/include)
 
 if(NOT COMPONENT_TARGETS_ENABLED)
-  message(STATUS "Install only 1 cmake Component ${PROJECT_NAMESPACE}Targets.cmake config file")
+  message(STATUS "Install only 1 cmake config target ${PROJECT_NAMESPACE}Targets.cmake file")
 endif()
+
+# ---- Add components libraries here ----
 
 add_subdirectory(source/Addition)
 add_subdirectory(source/SquareRoot)
 add_subdirectory(source/MathFunctions)
 
+# ---------------------------------------
+
 include(GenerateExportHeader)
+
+# Note: depends on target MathFunctions! CK
 string(TOLOWER ${PROJECT_NAME}/${PROJECT_NAMESPACE}_export.h EXPORT_HEADER_LOCATION)
-generate_export_header(${PROJECT_NAMESPACE} EXPORT_FILE_NAME include/${EXPORT_HEADER_LOCATION})
+
+# Note: need to generate at source tree! CK
+generate_export_header(
+  ${PROJECT_NAMESPACE} EXPORT_FILE_NAME ${PROJECT_SOURCE_DIR}/include/${EXPORT_HEADER_LOCATION}
+)
 
 # install generated header files
 string(TOLOWER ${PROJECT_NAMESPACE} HEADER_LOCATION)
 install(
-  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/$(HEADER_LOCATION)
-  TYPE INCLUDE # OR DESTINATION include/${PROJECT_NAMESPACE}
+  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/${HEADER_LOCATION}
+  TYPE INCLUDE # or: DESTINATION include/${PROJECT_NAMESPACE}
   FILES_MATCHING
   PATTERN "*.h"
 )
 
-# install header files
+# install source tree header files
 install(
   DIRECTORY include/${HEADER_LOCATION}
-  TYPE INCLUDE # OR DESTINATION include/${PROJECT_NAMESPACE}
+  TYPE INCLUDE # or: DESTINATION include/${PROJECT_NAMESPACE}
   FILES_MATCHING
   PATTERN "*.h"
 )
 
-# generate and install export file
+# Note: This needs to be done after all install(TARGETS ...) commands! generate and install export
+# file
 install(
   EXPORT ${PROJECT_NAMESPACE}Targets
   FILE ${PROJECT_NAMESPACE}Targets.cmake
@@ -100,9 +104,8 @@ configure_package_config_file(
   NO_CHECK_REQUIRED_COMPONENTS_MACRO
 )
 
-# generate the export targets for the build tree. This needs to be done after the all
-# install(TARGETS ...) commands!  Note: The file created by this command is specific to the build
-# tree and should never be installed!
+# generate the export targets for the build tree. Note: The file created by this command is specific
+# to the build tree and should never be installed!
 export(
   EXPORT ${PROJECT_NAMESPACE}Targets
   FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAMESPACE}Targets.cmake
