linux has case sensitive files system
change PROJECT_HEADER_LOCATION to lower case

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ CPMAddPackage(
 set(COMPONENT_TARGETS_ENABLED NO)
 set(PROJECT_NAMESPACE ${PROJECT_NAME})
 set(NAMESPACE_HEADER_LOCATION ${CMAKE_CURRENT_LIST_DIR}/include)
+string(TOLOWER ${PROJECT_NAMESPACE} PROJECT_HEADER_LOCATION)
 
 if(NOT COMPONENT_TARGETS_ENABLED)
   message(STATUS "Install only 1 cmake config target ${PROJECT_NAMESPACE}Targets.cmake file")
@@ -62,9 +63,8 @@ generate_export_header(
 )
 
 # install generated header files
-string(TOLOWER ${PROJECT_NAMESPACE} HEADER_LOCATION)
 install(
-  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/${HEADER_LOCATION}
+  DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/${PROJECT_HEADER_LOCATION}
   TYPE INCLUDE # or: DESTINATION include/${PROJECT_NAMESPACE}
   FILES_MATCHING
   PATTERN "*.h"
@@ -72,7 +72,7 @@ install(
 
 # install source tree header files
 install(
-  DIRECTORY include/${HEADER_LOCATION}
+  DIRECTORY include/${PROJECT_HEADER_LOCATION}
   TYPE INCLUDE # or: DESTINATION include/${PROJECT_NAMESPACE}
   FILES_MATCHING
   PATTERN "*.h"
