use PackageConfig.cmake function
this install all libraries to lib/MathFunctions subdir

--- a/source/Addition/CMakeLists.txt
+++ b/source/Addition/CMakeLists.txt
@@ -25,9 +25,9 @@ target_include_directories(
 install(
   TARGETS Addition
   EXPORT ${PROJECT_NAMESPACE}Targets
-  ARCHIVE DESTINATION lib
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
+  ARCHIVE DESTINATION lib/${PROJECT_NAMESPACE}
+  LIBRARY DESTINATION lib/${PROJECT_NAMESPACE}
+  RUNTIME DESTINATION bin/${PROJECT_NAMESPACE}
   INCLUDES
   DESTINATION include
 )
