install with version prefix
add more clang-tidy checks
prepare modernize target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,19 +39,29 @@ CPMAddPackage(
 option(COMPONENT_TARGETS_ENABLED "Install multiple cmake config target files" NO)
 set(PROJECT_NAMESPACE ${PROJECT_NAME})
 set(NAMESPACE_HEADER_LOCATION ${CMAKE_CURRENT_LIST_DIR}/include)
-#TODO set(INCLUDE_INSTALL_DIR include/${PROJECT_NAMESPACE}-${PROJECT_VERSION})
+set(INCLUDE_INSTALL_DIR include/${PROJECT_NAMESPACE}-${PROJECT_VERSION})
 string(TOLOWER ${PROJECT_NAMESPACE} PROJECT_HEADER_LOCATION)
+# TBD: needed to be lower case? CK
 
 # ---- Add components libraries here ----
 
 add_subdirectory(source/Addition)
 add_subdirectory(source/SquareRoot)
 
-# add_subdirectory(source/MathFunctions)
+# NO! add_subdirectory(source/MathFunctions)
 add_library(${PROJECT_NAME} source/MathFunctions/MathFunctions.cxx)
 target_include_directories(
   ${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${NAMESPACE_HEADER_LOCATION}>
-                         $<INSTALL_INTERFACE:include>
+                         $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>
+)
+
+# Note: for SameMajorVersion upgrade stategie
+set_target_properties(
+  ${PROJECT_NAME}
+  PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR}
+             VERSION ${PROJECT_VERSION}
+             VISIBILITY_INLINES_HIDDEN ${BUILD_SHARED_LIBS}
+             CMAKE_VISIBILITY_INLINES_HIDDEN ${BUILD_SHARED_LIBS}
 )
 
 # ---- Create an installable target ----
@@ -60,13 +70,12 @@ target_include_directories(
 # the location where the project's version header will be placed should match the project's regular
 # header paths
 string(TOLOWER ${PROJECT_NAMESPACE}/version.h VERSION_HEADER_LOCATION)
-
-# Note: depends on target MathFunctions! CK
 string(TOLOWER ${PROJECT_NAMESPACE}/${PROJECT_NAMESPACE}_export.h EXPORT_HEADER_LOCATION)
+# TBD: needed to be lower case? CK
 
 include(GenerateExportHeader)
 
-# Note: need to generate at source tree! CK
+# TODO: need to generate at source tree! CK
 generate_export_header(
   ${PROJECT_NAMESPACE} EXPORT_FILE_NAME ${NAMESPACE_HEADER_LOCATION}/${EXPORT_HEADER_LOCATION}
 )
@@ -77,7 +86,7 @@ install(
   EXPORT ${PROJECT_NAMESPACE}Targets
   FILE ${PROJECT_NAMESPACE}Targets.cmake
   NAMESPACE ${PROJECT_NAMESPACE}::
-  DESTINATION lib/cmake/${PROJECT_NAMESPACE}
+  DESTINATION lib/cmake/${PROJECT_NAMESPACE}-${PROJECT_VERSION}
 )
 
 if(NOT COMPONENT_TARGETS_ENABLED)
@@ -90,18 +99,18 @@ if(NOT COMPONENT_TARGETS_ENABLED)
     NAMESPACE ${PROJECT_NAMESPACE}
     BINARY_DIR ${PROJECT_BINARY_DIR}
     INCLUDE_DIR ${NAMESPACE_HEADER_LOCATION}
-    INCLUDE_DESTINATION include #TODO ${INCLUDE_INSTALL_DIR}
+    INCLUDE_DESTINATION ${INCLUDE_INSTALL_DIR}
     VERSION_HEADER ${VERSION_HEADER_LOCATION}
-    #FIXME EXPORT_HEADER ${EXPORT_HEADER_LOCATION}
-    COMPATIBILITY SameMajorVersion
-    DISABLE_VERSION_SUFFIX YES DISABLE_CHECK_REQUIRED_COMPONENTS YES
+    EXPORT_HEADER ${EXPORT_HEADER_LOCATION}
+    COMPATIBILITY SameMajorVersion #XXX DISABLE_VERSION_SUFFIX YES
+                  DISABLE_CHECK_REQUIRED_COMPONENTS YES
   )
 else()
 
   # install generated header files
   install(
     DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/${PROJECT_HEADER_LOCATION}
-    TYPE INCLUDE # or: DESTINATION include/${PROJECT_NAMESPACE}
+    TYPE INCLUDE # or: DESTINATION ${INCLUDE_INSTALL_DIR}
     FILES_MATCHING
     PATTERN "*.h"
   )
@@ -109,7 +118,7 @@ else()
   # install source tree header files
   install(
     DIRECTORY include/${PROJECT_HEADER_LOCATION}
-    TYPE INCLUDE # or: DESTINATION include/${PROJECT_NAMESPACE}
+    TYPE INCLUDE # or: DESTINATION ${INCLUDE_INSTALL_DIR}
     FILES_MATCHING
     PATTERN "*.h"
   )
