--- a/source/SquareRoot/CMakeLists.txt
+++ b/source/SquareRoot/CMakeLists.txt
@@ -18,24 +18,25 @@ set_target_properties(
 
 # add include directories
 target_include_directories(
-  SquareRoot PUBLIC $<BUILD_INTERFACE:${NAMESPACE_HEADER_LOCATION}> $<INSTALL_INTERFACE:include>
+  SquareRoot PUBLIC $<BUILD_INTERFACE:${NAMESPACE_HEADER_LOCATION}>
+                    $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>
 )
 
 # install the target and create export-set
 install(
   TARGETS SquareRoot
   EXPORT ${PROJECT_NAMESPACE}Targets
-  ARCHIVE DESTINATION lib/${PROJECT_NAMESPACE}
-  LIBRARY DESTINATION lib/${PROJECT_NAMESPACE}
-  RUNTIME DESTINATION bin&${PROJECT_NAMESPACE}
+  ARCHIVE DESTINATION lib/${PROJECT_NAMESPACE}-${PROJECT_VERSION}
+  LIBRARY DESTINATION lib/${PROJECT_NAMESPACE}-${PROJECT_VERSION}
+  RUNTIME DESTINATION bin/${PROJECT_NAMESPACE}-${PROJECT_VERSION}
   INCLUDES
-  DESTINATION include
+  DESTINATION ${INCLUDE_INSTALL_DIR}
 )
 
 # MAYBE: install public header files
 # string(TOLOWER ${PROJECT_NAMESPACE} HEADER_LOCATION)
 # install(FILES ${NAMESPACE_HEADER_LOCATION}/${PROJECT_NAMESPACE}/SquareRoot.h
-#         DESTINATION include/${PROJECT_NAMESPACE}
+#         DESTINATION ${INCLUDE_INSTALL_DIR}/${PROJECT_NAMESPACE}
 # )
 
 if(COMPONENT_TARGETS_ENABLED)
