--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -25,7 +25,7 @@ CPMAddPackage(
 )
 
 CPMAddPackage(NAME MathFunctions SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
-# same as: add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/.. MathFunctions)
+# Not same as! add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/.. MathFunctions)
 
 # ---- Create standalone executable ----
 
