--- a/source/SquareRoot/CMakeLists.txt
+++ b/source/SquareRoot/CMakeLists.txt
@@ -18,17 +18,19 @@ set_target_properties(
 
 # add include directories
 target_include_directories(
-  SquareRoot PUBLIC $<BUILD_INTERFACE:${NAMESPACE_HEADER_LOCATION}>
-                    $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>
+  SquareRoot
+  PUBLIC $<BUILD_INTERFACE:${NAMESPACE_HEADER_LOCATION}>
+         $<BUILD_INTERFACE:${PROJECT_VERSION_INCLUDE_DIR}>
+         $<INSTALL_INTERFACE:${INCLUDE_INSTALL_DIR}>
 )
 
 # install the target and create export-set
 install(
   TARGETS SquareRoot
   EXPORT ${PROJECT_NAMESPACE}Targets
-  ARCHIVE DESTINATION lib/${PROJECT_NAMESPACE}-${PROJECT_VERSION}
-  LIBRARY DESTINATION lib/${PROJECT_NAMESPACE}-${PROJECT_VERSION}
-  RUNTIME DESTINATION bin/${PROJECT_NAMESPACE}-${PROJECT_VERSION}
+  ARCHIVE DESTINATION lib/${PROJECT_NAMESPACE}-${PROJECT_VERSION} # XXX VERSION_SUFFIX
+  LIBRARY DESTINATION lib/${PROJECT_NAMESPACE}-${PROJECT_VERSION} # XXX VERSION_SUFFIX
+  RUNTIME DESTINATION bin/${PROJECT_NAMESPACE}-${PROJECT_VERSION} # XXX VERSION_SUFFIX
   INCLUDES
   DESTINATION ${INCLUDE_INSTALL_DIR}
 )
